code improvements/clarifications